--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    
     <title>Fitness & Gym </title>
-    <link rel="stylesheet" href="Gym website.css">
+    <link rel="stylesheet" href="style.css">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/fontawesome.min.css">
 </head>
 <body>
